testsuite/tests/builtins/list_methods/all/both_pos_and_named/test.out
Error: Both positional and named value
   ╭─[ <working-dir>/script.lkql:2:7 ]
   │
 2 │ print(l.all((x) => x, predicate=(x) => x))
   │       ─────────────────┬─────────────────  
   │                        ╰─────────────────── The parameter "predicate" has been provided a positional and a named value
───╯
